--- a/my-plugin/package.json
+++ b/my-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "debug": "node node_modules/webpack/bin/webpack.js"
+    "debug": "node --inspect --inspect-brk node_modules/webpack/bin/webpack.js"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
@@ -12,5 +12,8 @@
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "markdown-it": "^12.1.0"
   }
 }
